--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -37,7 +37,7 @@
             <button class="fa-solid fa-ellipsis fafa " onclick="openChangeMenu(this)"></button>
             <div class="changeMenu fafaca">
                 <a href="/editProduct">Редактировать</a>
-                <a href="/delete/<%=item._id%>">Удалить</a>
+                <a href="/delete/<%=data._id%>">Удалить</a>
             </div>
         </div>
     </div>
