--- a/views/products.ejs
+++ b/views/products.ejs
@@ -23,7 +23,7 @@
 
         <div class="products">
             <div class="category">
-                <h1>Cheirs</h1>
+                <h1>Chairs</h1>
                 <a class="addProduct" href="/newProduct"><i class="fa-light fa-plus"></i> Добавить продукт</a>
             </div>
             <div class="elements">
