--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -36,7 +36,7 @@
         <div class="addToBusket">
             <button class="fa-solid fa-ellipsis fafa " onclick="openChangeMenu(this)"></button>
             <div class="changeMenu fafaca">
-                <a href="/editProduct">Редактировать</a>
+                <a href="/editProduct/<%=data._id%>">Редактировать</a>
                 <a href="/delete/<%=data._id%>">Удалить</a>
             </div>
         </div>
